<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrueMainActivity">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_inp_fathname2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/search"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif"
                android:text="@string/sales_news"
                android:textFontWeight="@android:integer/config_longAnimTime"
                android:textSize="17dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_inp_fathname2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="2dp"
                android:fillViewport="true" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="Каталог анализов"
                android:textFontWeight="@android:integer/config_longAnimTime"
                android:textSize="17dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollViewB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scrollbarThumbHorizontal="@null"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="5dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_deloft"
                        android:backgroundTint="@color/blue"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:stateListAnimator="@null"
                        android:text="@string/popular"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_deloft"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:stateListAnimator="@null"
                        android:text="@string/covid"
                        android:textAllCaps="false"
                        android:textColor="#7e7e9a" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_deloft"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:stateListAnimator="@null"
                        android:text="@string/complex"
                        android:textAllCaps="false"
                        android:textColor="#7e7e9a" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_deloft"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:stateListAnimator="@null"
                        android:text="@string/other"
                        android:textAllCaps="false"
                        android:textColor="#7e7e9a" />
                </LinearLayout>
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="2dp"
                android:fillViewport="true" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/border_top"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_delete" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="В корзину"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="500 ₽"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bar1" />

</androidx.constraintlayout.widget.ConstraintLayout>